loader z-index fixed

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -71,15 +71,16 @@
         z-index: 999;
     }
 }
-    .youtubeBannerIframe {
-        position: absolute;
-        top: -60px;
-        width: 100%;
-        height: 550px;
-        opacity: 0;
-        z-index: 9999;
-        animation: bannerIframeFade 0.4s 3.4s ease-in-out forwards;
-    }
+.youtubeBannerIframe {
+    position: absolute;
+    top: -60px;
+    width: 100%;
+    height: 550px;
+    opacity: 0;
+    transform: scale(0);
+    z-index: 9999;
+    animation: bannerIframeFade 0.4s 3.4s ease-in-out forwards;
+}
 // @keyframes bannerFade {
 //     0% {
 //         opacity: 1;
@@ -94,8 +95,14 @@
 @keyframes bannerIframeFade {
     0% {
         opacity: 0;
+        transform: scale(0);
+    }
+    3% {
+        opacity: 0;
+        transform: scale(1);
     }
     100% {
         opacity: 1;
+        transform: scale(1);
     }
 }
