--- a/src/pages/LoaderScreen/LoaderScreen.scss
+++ b/src/pages/LoaderScreen/LoaderScreen.scss
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100vw;
     height: 100vh;
-    z-index: 999;
+    z-index: 999999999999;
     display: flex;
     flex-direction: column;
     justify-content: center;
